...
                    contentDescription = "App Logo",
                    modifier =
                        Modifier.testTag("signUpIcon")
                            .size(100.dp)
                            .align(Alignment.CenterHorizontally))
...
                    style = Typography.titleLarge,
                    modifier =
                        Modifier.testTag("signUpSeekerTitle").align(Alignment.CenterHorizontally))

                Spacer(modifier = Modifier.height(16.dp))
...
                    leadingIcon = Icons.Default.Person,
                    leadingIconDescription = "Person Icon",
                    testTag = "fullNameInput",
                    errorTestTag = "fullNameErrorSeekerRegistration")

                Spacer(modifier = Modifier.height(10.dp))
...
                    leadingIcon = Icons.Default.Person,
                    leadingIconDescription = "Person Icon",
                    testTag = "userNameInput",
                    errorTestTag = "userNameErrorSeekerRegistration")

                Spacer(modifier = Modifier.height(10.dp))
...
                    leadingIcon = Icons.Default.Phone,
                    leadingIconDescription = "Phone Icon",
                    testTag = "phoneNumberInput",
                    errorTestTag = "phoneNumberErrorSeekerRegistration",
                    keyboardType = KeyboardType.Number)

...
                    },
                    modifier =
                        Modifier.fillMaxWidth().height(60.dp).testTag("completeRegistrationButton"),
                    shape = RoundedCornerShape(12.dp),
                    colors =
...
                          modifier =
                              Modifier.align(Alignment.CenterHorizontally)
                                  .testTag("preferencesTitle"),
                          textAlign = TextAlign.Center // Center the text
                          )
...
                              Modifier.size(100.dp)
                                  .align(Alignment.CenterHorizontally)
                                  .testTag("preferencesIllustration"))
                      Spacer(modifier = Modifier.height(20.dp))
                      val userId = user?.uid
...
                      Button(
                          onClick = { currentStep = 3 },
                          modifier = Modifier.fillMaxWidth().testTag("savePreferencesButton"),
                          colors = buttonColors(colorScheme.secondary)) {
                            Text("Save Preferences", color = colorScheme.onSecondary)
...
                          style = Typography.bodyLarge,
                          modifier =
                              Modifier.align(Alignment.CenterHorizontally).testTag("footerText"),
                          textAlign = TextAlign.Center)
                    }
...
                    style = Typography.titleLarge,
                    modifier =
                        Modifier.align(Alignment.CenterHorizontally).testTag("confirmationTitle"))

                Spacer(modifier = Modifier.height(16.dp))
...
                        Modifier.size(200.dp)
                            .align(Alignment.CenterHorizontally)
                            .testTag("celebrationIllustration") // Adjust size as needed
                    )
                Spacer(modifier = Modifier.height(100.dp))
...
                    modifier =
                        Modifier.align(Alignment.CenterHorizontally)
                            .testTag("successMessageText"), // Add horizontal padding
                    textAlign = TextAlign.Center)

...
                      // navigationActions.goBack() // Navigate after saving
                    },
                    modifier = Modifier.fillMaxWidth().testTag("exploreServicesButton"),
                    colors = buttonColors(colorScheme.secondary) // Green button
                    ) {
...
